--- a/Pizza.Admin/Pizza.Admin.csproj
+++ b/Pizza.Admin/Pizza.Admin.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
+  </ItemGroup>
+
 </Project>
