Stubbed out admin adding pizza orders
Added a constants project
Stubbed out there pizzaOrder Service

--- a/Pizza.Admin/Pizza.Admin.csproj
+++ b/Pizza.Admin/Pizza.Admin.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Autofac" Version="4.9.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pizza.Constants\Pizza.Constants.csproj" />
+    <ProjectReference Include="..\Pizza.Interface\Pizza.Interface.csproj" />
+    <ProjectReference Include="..\Pizza.Model\Pizza.Model.csproj" />
+  </ItemGroup>
+
 </Project>
