--- a/Pizza/Pizza.Web.csproj
+++ b/Pizza/Pizza.Web.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+
   <ItemGroup>
-    <ProjectReference Include="..\Pizza.Model\Pizza.Model.csproj" />
   </ItemGroup>
 
 </Project>
