--- a/Pizza.Service/Pizza.Service.csproj
+++ b/Pizza.Service/Pizza.Service.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pizza.Interface\Pizza.Interface.csproj" />
+    <ProjectReference Include="..\Pizza.RepositoryCore\Pizza.RepositoryCore.csproj" />
   </ItemGroup>
 
 </Project>
